<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:text="message received"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="107dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:text="is"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignLeft="@+id/textView" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="89dp"
        android:text="@string/reply"
        android:onClick="@string/return_reply"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_above="@+id/button"
        android:text="@string/enter_your_reply_here" />

    <EditText
        android:id="@+id/edittext2"
        android:layout_width="195dp"
        android:layout_height="wrap_content"


        android:layout_alignTop="@+id/button" />

</RelativeLayout>